# DGSI-LAB3

./: README.md
week-03/: .gitignore  README.md  report.md
week-03/evidence/: three_pigs_scenario1.txt  three_pigs_scenario2.txt
week-03/function-calling/function-calling/: .gitignore  README.md  math_solver_function_calling.py  pyproject.toml
week-03/function-calling/function-calling/logs/: math_solver_log.jsonl
